--- a/sass/components/_slider.scss
+++ b/sass/components/_slider.scss
@@ -50,7 +50,7 @@
 		}
 		.slick-next{
 			.home &{
-				right:0;
+				right:5px;
 				left:auto;
 			}
 			#opening-element-carousel &,#news-archive-carousel &{
@@ -64,6 +64,7 @@
 			right:45px;
 			.home &{
 				right:auto;
+				left:5px;
 			}
 		}
 		nav{
