--- a/sass/components/_typography.scss
+++ b/sass/components/_typography.scss
@@ -30,12 +30,15 @@ h1,h2,h3,h4,h5{
 		margin-top: -10px;
 	}
 }
-h1{
+h1,h2{
 	text-align:center;
+	@media screen and (max-width: $break-small) {
+		@include font-size(28);
+	}
 }
 h3{
 	@include font-size(28);
-	@media screen and (max-width: $break-large) {
+	@media screen and (max-width: $break-medium) {
 		@include font-size(24);
 	}
 }
