--- a/sass/templates/_home.scss
+++ b/sass/templates/_home.scss
@@ -6,32 +6,44 @@
 .home{
 	#main{
 		@extend %clearfix;
-		padding-right:22px;
-		padding-top:500px;
+		padding-top:106px;
 		padding-bottom:50px;
 		background-color:#000;
 	}
 	#content{
-		@include span-columns(10);
-		@include shift(6);
+		@include span-columns(8);
+		@include shift(4);
+		@media screen and (max-width: $break-large) {
+			@include span-columns(10);
+			@include shift(1);
+		}
+		@media screen and (max-width: $break-xsmall) {
+			@include span-columns(12);
+			@include shift(0);
+		}
 		position: relative;
 		z-index:998;
 		@extend %clearfix;
 	}
-
-	#features{
-		@extend %clearfix;
-	}
 	#intro{
-		background-color: white;
-		padding:30px;
-		@include font-size(18);
-		line-height: 130%;
-		margin-bottom: 4%;
+		h2{
+			text-align: left;
+		}
+		p.big{
+			margin-bottom: 20px;
+		}
 	}
 	.feature-link{
-		@include span-columns(8);
+		@include span-columns(6);
 		@include omega(2n);
+		@media screen and (max-width: $break-small) {
+			@include span-columns(12);
+		}
 		margin-bottom: 1.75788%;
+		&.quote{
+			@include span-columns(12);
+			margin:0;
+			padding-bottom:50px;
+		}
 	}
 }
